--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,76 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Meta User Data Deletion — Stone Grill Restaurant</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="robots" content="index,follow">
+  <meta charset="UTF-8" />
+  <title>Privacy Policy — Stone Grill Restaurant</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Stone Grill Restaurant Privacy Policy: what we collect, how we use it, sharing, retention, your rights, and how to request deletion." />
+  <meta name="robots" content="index,follow" />
+  <link rel="canonical" href="https://stonegrillresto.net/privacy-policy.html" />
   <style>
-    body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; line-height: 1.55; padding: 24px; max-width: 900px; margin: auto; color: #222; }
-    h1, h2 { margin: 0.6em 0 0.3em; }
-    .card { border: 1px solid #eee; border-radius: 12px; padding: 16px 18px; margin: 14px 0; background: #fafafa; }
-    a.button { display: inline-block; padding: 10px 14px; border-radius: 8px; text-decoration: none; border: 1px solid #ddd; }
-    .muted { color: #666; font-size: 0.95em; }
-    ul { margin: 0.4em 0 0.8em 1.2em; }
-    li { margin: 0.2em 0; }
-    code { background: #f1f1f1; padding: 0 4px; border-radius: 4px; }
+    body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; line-height: 1.6; margin: 0; color:#222; }
+    main { max-width: 900px; padding: 28px 20px 40px; margin: 0 auto; }
+    h1, h2, h3 { margin: .8em 0 .4em; }
+    a { color: #0b57d0; text-decoration: underline; }
+    .muted { color:#666; font-size:.95rem; }
+    header.site { padding:14px 20px; background:#f8f8f8; border-bottom:1px solid #eee; }
+    header.site a { color:#333; text-decoration:none; }
+    footer.site { padding:16px 20px; background:#f9f9f9; border-top:1px solid #eee; text-align:center; font-size:.95rem; color:#555; }
   </style>
 </head>
 <body>
-  <h1>Meta User Data Deletion</h1>
-  <p class="muted"><strong>Effective Date:</strong> August 18, 2025</p>
+  <header class="site">
+    <a href="/">← Back to Stone Grill</a>
+  </header>
 
-  <p>This page explains how to request deletion of personal data we hold that is connected to Facebook, Instagram, or Messenger (“Meta Platform Data”), as well as data you provided through our website or online ordering.</p>
+  <main>
+    <h1>Privacy Policy</h1>
+    <p class="muted"><strong>Effective Date:</strong> August 18, 2025</p>
 
-  <div class="card">
-    <h2>How to Request Deletion</h2>
-    <ol>
-      <li>Email us at <a href="mailto:stonegrill2014@gmail.com">stonegrill2014@gmail.com</a> with the subject line: <em>“Meta Data Deletion Request”</em>.</li>
-      <li>Include:
-        <ul>
-          <li>The Page you interacted with: <strong>Stone Grill Restaurant</strong></li>
-          <li>Your Messenger profile name (or the link to your FB profile), and any contact info you used with us (email or phone)</li>
-          <li>Approximate dates of your conversation/order</li>
-        </ul>
-      </li>
-      <li>We will verify your identity and delete associated records from our systems within <strong>30 days</strong>, then confirm by email.</li>
-    </ol>
-    <p><a class="button" href="mailto:stonegrill2014@gmail.com?subject=Meta%20Data%20Deletion%20Request">Start deletion request via email</a></p>
-  </div>
+    <p>Stone Grill Restaurant (“Stone Grill”, “we”, “our”, “us”) respects your privacy. This policy explains how we collect, use, share, and protect personal information when you use our website, online ordering, and connected messaging experiences (including Facebook Messenger).</p>
 
-  <div class="card">
-    <h2>Delete Access via Facebook Settings (Optional)</h2>
-    <p>You can also remove our app’s access in your Facebook Account Settings. When Meta notifies us of your removal/deletion, we will delete corresponding records we hold.</p>
-  </div>
+    <h2>1) Who we are</h2>
+    <p>Stone Grill Restaurant, Poblacion, Bato, Leyte, Philippines. Phone: +63 53 568 0539 • Email: <a href="mailto:stonegrill2014@gmail.com">stonegrill2014@gmail.com</a></p>
 
-  <h2>What We Delete</h2>
-  <ul>
-    <li>Contact details you provided to us (name, phone, email)</li>
-    <li>Order/reservation records and special requests stored on our systems</li>
-    <li>Messages and message metadata we store outside of Meta systems (if any)</li>
-  </ul>
+    <h2>2) Scope</h2>
+    <p>This policy covers our website <a href="https://stonegrillresto.net/">stonegrillresto.net</a>, our online order page, and our Meta app (<em>MOB Profie</em>) used for Facebook/Messenger integrations.</p>
 
-  <h2>What We May Retain (Limited)</h2>
-  <p>We may retain certain information if required for legal, accounting, fraud prevention, or dispute-resolution purposes. If retention applies, we will minimize the data and keep it only as long as necessary.</p>
-
-  <h2>Scope</h2>
-  <p>This process covers data we control for:
+    <h2>3) Information we collect</h2>
     <ul>
-      <li><strong>Website & Online Ordering:</strong> <a href="https://stonegrillresto.net/">stonegrillresto.net</a></li>
-      <li><strong>Messenger/Facebook/Instagram interactions</strong> made through our app <em>MOB Profie</em> or our Page</li>
+      <li><strong>Identity &amp; Contact:</strong> name, email, phone, address.</li>
+      <li><strong>Order/Reservation Details:</strong> items, date/time, party size, special requests.</li>
+      <li><strong>Technical:</strong> IP address, device/browser data, pages viewed.</li>
+      <li><strong>Payment:</strong> basic details you provide for proof of payment (we do not store full card/account data on our servers).</li>
     </ul>
-  </p>
 
-  <h2>Verification</h2>
-  <p>To protect your privacy, we verify deletion requests by matching details you provide (e.g., profile name, message timestamps, order info) with our records.</p>
+    <h3>Meta Platform Data (Messenger/Login)</h3>
+    <p>If you interact via Facebook Login, Pages, or Messenger, we may receive information permitted by you and by our approved permissions (e.g., page-scoped ID, message content you send to us). We use this data solely to provide requested features such as responding to inquiries, confirming orders/reservations, or support. We do not sell Meta Platform Data and we use it only as described here and consistent with Meta’s terms.</p>
 
-  <h2>Third-Party Services</h2>
-  <p>We use trusted service providers (data processors) to operate our services (e.g., hosting, messaging/alerts, analytics, and payments). When we delete your data, we also instruct these providers to delete related records they process on our behalf where applicable.</p>
+    <h2>4) How we use information</h2>
+    <ul>
+      <li>Confirm and process orders/reservations; provide customer support.</li>
+      <li>Send updates related to your order/reservation or service changes.</li>
+      <li>Improve our website and offerings; prevent fraud and misuse.</li>
+      <li>Comply with legal and regulatory obligations.</li>
+    </ul>
 
-  <h2>Contact</h2>
-  <p>Stone Grill Restaurant • Poblacion, Bato, Leyte, Philippines<br>
-     Phone: +63 53 568 0539 • Email: <a href="mailto:stonegrill2014@gmail.com">stonegrill2014@gmail.com</a></p>
+    <h2>5) Cookies &amp; analytics</h2>
+    <p>We use cookies and analytics tools (e.g., Meta Pixel, Google Analytics) to measure usage and improve performance. You can control cookies in your browser settings; some features may rely on cookies to function.</p>
 
-  <p class="muted">For details on how we collect and use data, see our <a href="/privacy-policy.html">Privacy Policy</a>.</p>
+    <h2>6) Data sharing</h2>
+    <p>We do <strong>not</strong> sell personal data. We share limited data with service providers that help us operate, under confidentiality and security obligations.</p>
+
+    <h2>7) Service Providers (Data Processors)</h2>
+    <ul>
+      <li><strong>Web Hosting:</strong> GitHub Pages (hosts our website).</li>
+      <li><strong>Messaging &amp; Notifications:</strong> Telegram (receipt notifications), ManyChat (Messenger automation).</li>
+      <li><strong>Analytics:</strong> Google Analytics (usage statistics).</li>
+      <li><strong>Payment/Proof of Payment:</strong> GCash (via your QR/app; we don’t store your account numbers).</li>
+      <li><strong>Meta Platforms:</strong> Facebook, Messenger, Instagram (for login and messaging features).</li>
+    </ul>
+
+    <h2>8) International transfers</h2>
+    <p>Your data may be processed outside the Philippines by our service providers. We take steps to ensure appropriate protections are in place.</p>
+
+    <h2>9) Retention</h2>
+    <p>Order/reservation records are kept only as long as needed for operations, accounting, or legal requirements. Routine customer messages are retained for up to 24 months unless you request earlier deletion or a longer period is required by law.</p>
+
+    <h2>10) Your rights</h2>
+    <p>You can request access, correction, or deletion of your data at any time by emailing <a href="mailto:stonegrill2014@gmail.com">stonegrill2014@gmail.com</a>. You can also remove our app’s access in your Facebook settings; we will honor any deletion request we receive from Meta.</p>
+
+    <h2>11) Security</h2>
+    <p>We use reasonable technical and organizational safeguards. However, no method of transmission or storage is 100% secure.</p>
+
+    <h2>12) Children’s privacy</h2>
+    <p>Our services are not directed to children under 13, and we do not knowingly collect their data.</p>
+
+    <h2>13) How to request deletion</h2>
+    <p>See our <a href="/data-deletion.html">Meta User Data Deletion</a> page for step-by-step instructions, or email us directly.</p>
+
+    <h2>14) Changes to this policy</h2>
+    <p>We may update this policy from time to time. We will post the latest version here with an updated effective date.</p>
+
+    <h2>15) Contact</h2>
+    <p>Stone Grill Restaurant • Poblacion, Bato, Leyte, Philippines • +63 53 568 0539 • <a href="mailto:stonegrill2014@gmail.com">stonegrill2014@gmail.com</a></p>
+  </main>
+
+  <footer class="site">
+    © 2025 Stone Grill Restaurant •
+    <a href="/privacy-policy.html">Privacy Policy</a> •
+    <a href="/data-deletion.html">Data Deletion</a>
+  </footer>
 </body>
 </html>
