--- a/order/index.html
+++ b/order/index.html
@@ -299,6 +299,12 @@
     </div>
   </div>
 
+  <div class="cart-summary">
+  <a href="#" id="howToOrderLink" class="btn ghost">How to Order</a>
+</div>
+
+
+
   <!-- === SG Privacy/Data Notice — Single-File Injector (v4) [UPDATED] === -->
   <script>
   (function(){
