--- a/order/index.html
+++ b/order/index.html
@@ -177,8 +177,11 @@
           </label>
 
           <label>Mobile Number
-            <input type="tel" id="mobileNumber" inputmode="numeric" required placeholder="+63 9XX XXX XXXX">
-          </label>
+  <input type="tel" id="mobileNumber" inputmode="numeric" required placeholder="+63 9XX XXX XXXX">
+  <small style="display:block; margin-top:4px; color:#666; font-size:0.85rem;">
+    Please enter an <strong>active contact number</strong> so we can reach you to confirm your order.
+  </small>
+</label>
 
           <label>Order Type</label>
           <div class="inline">
