--- a/order/index.html
+++ b/order/index.html
@@ -4,6 +4,7 @@
   <!-- Document Basics -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  
   <title>Stone Grill's  — Online Reservation</title>
 
   <!-- Meta Pixel Code -->
@@ -24,6 +25,8 @@
          src="https://www.facebook.com/tr?id=643206718690040&ev=PageView&noscript=1" />
   </noscript>
   <!-- End Meta Pixel Code -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
+
 
   <!-- Basic SEO -->
   <meta name="description" content="Order sizzling plates, fresh seafood, and Filipino favorites from Stone Grill Restaurant in Leyte. Dine-in or take-out — fast, easy, and delicious!">
