--- a/index.html
+++ b/index.html
@@ -119,6 +119,12 @@ src="https://www.facebook.com/tr?id=643206718690040&ev=PageView&noscript=1"
     gtag('config', 'G-TP4B4GTZY9');
   </script>
   <!-- ===== /OPTIMIZED HEAD ===== -->
+  <!-- BEGIN: AdSense Auto Ads (Stone Grill) -->
+<script async
+  src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=pub-9771423771078445"
+  crossorigin="anonymous"></script>
+<!-- END: AdSense Auto Ads -->
+
 </head>
 
 <body class="index-page">
@@ -1092,5 +1098,16 @@ src="https://www.facebook.com/tr?id=643206718690040&ev=PageView&noscript=1"
       .catch(err => console.error("❌ SW registration failed", err));
   }
   </script>
+
+  <!-- BEGIN: AdSense Responsive Unit -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="pub-9771423771078445"
+     data-ad-slot="YOUR_SLOT_ID_HERE"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+<!-- END: AdSense Responsive Unit -->
+
 </body>
 </html>
