--- a/order/index.html
+++ b/order/index.html
@@ -150,7 +150,7 @@
 
           <label>Mobile Number
             <input type="tel" id="mobileNumber" inputmode="numeric" required placeholder="+63 9XX XXX XXXX">
-            <small style="display:block; margin-top:4px; color:#FF0000; font-size:0.85rem;">
+            <small style="display:block; margin-top:4px; color:#E64E4E; font-size:0.85rem;">
               Please enter an <strong>active contact number</strong> so we can reach you to confirm your order.
             </small>
           </label>
