--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <!-- ===== OPTIMIZED HEAD (kept features, cleaned OG, preload) ===== -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9771423771078445"
+     crossorigin="anonymous"></script>
   <!-- Title & SEO (kept) -->
   <title>Stone Grill Restaurant | Enjoyable and Relaxing Dining</title>
   <meta name="description" content="Stone Grill Restaurant offers a unique dining experience in Leyte, Philippines. Enjoy sizzling plates, fresh seafood, and family-friendly meals in a relaxing ambiance.">
