--- a/order/index.html
+++ b/order/index.html
@@ -9,6 +9,7 @@
   
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9771423771078445"
      crossorigin="anonymous"></script>
+    <meta name="google-adsense-account" content="ca-pub-9771423771078445">
   <!-- Meta Pixel Code -->
   <script>
     !function(f,b,e,v,n,t,s)
