Update featured dishes section to Ninox Reflections

--- a/reflections/index.html
+++ b/reflections/index.html
@@ -99,12 +99,16 @@
   </section>
 
   <section id="menu">
-    <h2>Featured Dishes</h2>
+    <h2>Ninox Reflections</h2>
     <div class="featured">
-      <div class="dish"><strong>Calamari</strong><br>Golden-fried and perfectly seasoned</div>
+      <div class="dish"><strong>Moments of solitude</strong><br>To the seekers who still believe there is more.
+To the ones who carry silence like prayer, and light like memory.
+
+May this book remind you that every breath is a conversation with eternity.
+</div>
       <div class="dish"><strong>Crispy Pata</strong><br>Crunchy, juicy pork knuckle delight</div>
       <div class="dish"><strong>Pancit Canton</strong><br>Savory stir-fried noodles</div>
-      <div class="dish"><strong>Seafood Platter</strong><br>Fresh ocean flavors on one plate</div>
+      <div class="dish"><strong>The Triune Reflection</strong><br>To every seeker who has questioned the light, yet still walked toward it.</div>
     </div>
   </section>
 
