--- a/reflections/index.html
+++ b/reflections/index.html
@@ -86,8 +86,8 @@
 
   <nav>
     <a href="#menu">Menu</a>
-    <a href="#updates">Updates</a>
-    <a href="#reviews">Reviews</a>
+    <a href="#updates">Reflections</a>
+    <a href="reflections/assets/Moments of Solitude.pdf">Moments of Solitude</a>
     <a href="tel:0535680539">Call Us</a>
     <a href="https://www.facebook.com/stonecitygrill" target="_blank">Facebook</a>
   </nav>
