Update title and meta tags for Moments of Solitude

--- a/reflections/pages/moments of solitude/index.html
+++ b/reflections/pages/moments of solitude/index.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>[TITLE] — Ninox Antolihao</title>
+  <title>Moments of Solitude — Ninox Antolihao</title>
   <link rel="stylesheet" href="/reflections/assets/reflections.css">
-  <!-- [updated: per-page share image if needed] -->
-  <meta property="og:title" content="[TITLE] — Ninox Antolihao">
-  <meta property="og:description" content="[ONE-LINE SUBTITLE]">
-  <meta property="og:image" content="/reflections/pages/[slug]/cover.jpg">
+
+  <meta property="og:title" content="Moments of Solitude — Ninox Antolihao">
+  <meta property="og:description" content="Every breath is a conversation with eternity.">
+  <meta property="og:image" content="/reflections/pages/moments-of-solitude/cover.jpg">
 </head>
 <body>
   <header>
     <img src="/reflections/assets/logo.png" alt="Stone Grill Logo">
-    <h1>[TITLE]</h1>
+    <h1>Moments of Solitude</h1>
     <p class="meta">By Ninox Antolihao • First Edition 2025</p>
   </header>
 
@@ -24,17 +24,16 @@
 
   <main class="container">
     <article class="reader">
-      <img class="cover" src="/reflections/pages/[slug]/cover.jpg" alt="[TITLE] cover">
+      <img class="cover" src="/reflections/pages/moments-of-solitude/cover.jpg" alt="Moments of Solitude cover">
+      
       <section class="content">
-        <!-- ========== PASTE YOUR REFLECTION HERE ========== -->
-        <p>Intro paragraph…</p>
-        <p>Next paragraph…</p>
-        <p>…</p>
+        <p>To the seekers who still believe there is more.</p>
+        <p>To the ones who carry silence like prayer, and light like memory.</p>
+        <p>May this book remind you that every breath is a conversation with eternity.</p>
       </section>
 
       <div class="download">
-        <!-- Optional: add a PDF link if available, or delete this block -->
-        <a class="btn" href="/reflections/pages/[slug]/[slug].pdf" target="_blank" rel="noopener">📄 Download PDF</a>
+        <a class="btn" href="/reflections/assets/Moments of Solitude.pdf" target="_blank" rel="noopener">📄 Download PDF</a>
       </div>
     </article>
   </main>
