Update cover image source in index.html

--- a/reflections/pages/moments of solitude/index.html
+++ b/reflections/pages/moments of solitude/index.html
@@ -24,7 +24,7 @@
 
   <main class="container">
     <article class="reader">
-      <img class="cover" src="/reflections/pages/moments-of-solitude/cover.jpg" alt="Moments of Solitude cover">
+      <img class="cover" src="reflections/assets/36307AC9-80AD-4A52-A10B-5A2D82817640.png" alt="Moments of Solitude cover">
       
       <section class="content">
         <p>To the seekers who still believe there is more.</p>
