--- a/reflections/pages/moments-of-solitude/index.html
+++ b/reflections/pages/moments-of-solitude/index.html
@@ -3,43 +3,68 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Moments of Solitude — Ninox Antolihao</title>
-  <link rel="stylesheet" href="/reflections/assets/reflections.css">
-
-  <meta property="og:title" content="Moments of Solitude — Ninox Antolihao">
-  <meta property="og:description" content="Every breath is a conversation with eternity.">
-  <meta property="og:image" content="/reflections/pages/moments-of-solitude/cover.jpg">
+  <title>Moments of Solitude — Stone Grill Reflections</title>
+  <meta name="description" content="A quiet invitation to stillness and presence.">
+  <link rel="icon" href="/reflections/assets/favicon.ico">
+  <style>
+    :root{
+      --bg:#fff4ea; --paper:#fffaf0; --ink:#5a2a27; --muted:#7b514d;
+      --accent:#d93404; --accent2:#f7b733; --rule:#fc4a1a; --radius:14px; --maxw:980px;
+    }
+    @media (prefers-color-scheme: dark){
+      :root{ --bg:#171311; --paper:#241d1a; --ink:#f3e3d9; --muted:#c7a69f; --accent:#ff6a3e; --accent2:#ffcc67; --rule:#ff6a3e; }
+    }
+    *{box-sizing:border-box}
+    html,body{margin:0;height:100%}
+    body{font-family: Georgia, ui-serif, serif; background:var(--bg); color:var(--ink)}
+    header{
+      background: linear-gradient(to right, var(--accent2), var(--rule));
+      padding: 20px 16px; text-align:center;
+    }
+    header img{max-height:56px}
+    header h1{margin:8px 0 0}
+    main{max-width:var(--maxw); margin:0 auto; padding: 24px 16px 48px}
+    .card{
+      background:var(--paper); border:2px solid #e67e22; border-radius:var(--radius);
+      overflow:hidden; display:grid; grid-template-columns: 1fr; gap:0;
+    }
+    .cover{width:100%; aspect-ratio: 16/9; object-fit:cover; background:#fff6e6}
+    .inner{padding:18px}
+    h2{margin:0 0 8px; font-size:clamp(22px,4vw,34px)}
+    p{margin:8px 0; color:var(--muted)}
+    .actions{margin-top:14px; display:flex; gap:10px; flex-wrap:wrap}
+    .btn{background:var(--accent); color:#fff; text-decoration:none; padding:10px 14px; border-radius:10px; font-weight:700}
+    .btn.secondary{background:#a94a1e}
+    .back{display:inline-block; margin-top:16px; color:var(--accent); text-decoration:none; font-weight:700}
+    footer{margin-top:24px; text-align:center; color:var(--muted)}
+    @media (min-width:840px){
+      .card{grid-template-columns: 46% 54%}
+      .cover{height:100%; aspect-ratio:auto}
+    }
+  </style>
 </head>
 <body>
   <header>
     <img src="/reflections/assets/logo.png" alt="Stone Grill Logo">
-    <h1>Moments of Solitude</h1>
-    <p class="meta">By Ninox Antolihao • First Edition 2025</p>
+    <h1>Ninox Reflections</h1>
   </header>
 
-  <nav>
-    <a href="/">Home</a>
-    <a href="/reflections">Back to Library</a>
-  </nav>
-
-  <main class="container">
-    <article class="reader">
-      <img class="cover" src="reflections/assets/36307AC9-80AD-4A52-A10B-5A2D82817640.png" alt="Moments of Solitude cover">
-      
-      <section class="content">
-        <p>To the seekers who still believe there is more.</p>
-        <p>To the ones who carry silence like prayer, and light like memory.</p>
-        <p>May this book remind you that every breath is a conversation with eternity.</p>
-      </section>
-
-      <div class="download">
-        <a class="btn" href="/reflections/assets/Moments of Solitude.pdf" target="_blank" rel="noopener">📄 Download PDF</a>
+  <main>
+    <article class="card">
+      <img class="cover" src="./cover.jpg" alt="Moments of Solitude cover" onerror="this.src='/reflections/assets/placeholder.jpg'">
+      <div class="inner">
+        <h2>Moments of Solitude — How Silence Teaches</h2>
+        <p><em>To the seekers who still believe there is more. To the ones who carry silence like prayer, and light like memory. May this remind you that every breath is a conversation with eternity.</em></p>
+        <p>This short book is a walk with quiet—how stillness slows the mind, steadies the heart, and returns you to what matters.</p>
+        <div class="actions">
+          <a class="btn" href="./read.html">Read Reflection</a>
+          <a class="btn secondary" href="./moments-of-solitude.pdf">Download PDF</a>
+        </div>
+        <a class="back" href="/reflections/pages/index.html">← Back to Reflections</a>
       </div>
     </article>
-  </main>
 
-  <footer class="footer">
-    <p>&copy; 2025 Ninox Antolihao • Stone Grill Restaurant</p>
-  </footer>
+    <footer>© First Edition 2025 · Ninox Antolihao</footer>
+  </main>
 </body>
 </html>
