Update back link to reflections index page

--- a/reflections/pages/moments-of-solitude/index.html
+++ b/reflections/pages/moments-of-solitude/index.html
@@ -60,7 +60,7 @@
           <a class="btn" href="./read.html">Read Reflection</a>
           <a class="btn secondary" href="./moments-of-solitude.pdf">Download PDF</a>
         </div>
-        <a class="back" href="/reflections/pages/index.html">← Back to Reflections</a>
+        <a class="back" href="/reflections/index.html">← Back to Reflections</a>
       </div>
     </article>
 
