--- a/reflections/pages/moments-of-solitude/index.html
+++ b/reflections/pages/moments-of-solitude/index.html
@@ -51,7 +51,7 @@
 
   <main>
     <article class="card">
-      <img class="cover" src="./cover.jpg" alt="Moments of Solitude cover" onerror="this.src='/reflections/assets/placeholder.jpg'">
+      <img class="cover" src="./cover.jpg" alt="Moments of Solitude cover" onerror="this.src='reflections/pages/moments-of-solitude/moments-of-solitude.png'">
       <div class="inner">
         <h2>Moments of Solitude — How Silence Teaches</h2>
         <p><em>To the seekers who still believe there is more. To the ones who carry silence like prayer, and light like memory. May this remind you that every breath is a conversation with eternity.</em></p>
