Update logo image source in index.html

--- a/reflections/pages/moments-of-solitude/index.html
+++ b/reflections/pages/moments-of-solitude/index.html
@@ -45,7 +45,7 @@
 </head>
 <body>
   <header>
-    <img src="/reflections/assets/logo.png" alt="Stone Grill Logo">
+    <img src="reflections/logo.PNG" alt="Stone Grill Logo">
     <h1>Ninox Reflections</h1>
   </header>
 
